--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
 <body>
-<iframe src="iframe/iframe.html"/>
+<iframe id="iframe"/>
+<script type="text/javascript">
+    var iframe = document.getElementById('iframe');
+    fetch('iframe/iframe.html').then(response =>
+        response.text().then(text => iframe.src = 'data:text/html;charset=UTF-8,' + encodeURIComponent(text))
+    );
+</script>
 </body>
 </html>
