Load via data url

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<body>
-<iframe id="iframe"/>
+<iframe>
+<iframe id="iframe"></iframe>
 <script type="text/javascript">
     var iframe = document.getElementById('iframe');
     fetch('iframe/iframe.html').then(response =>
