--- a/code-example-test.html
+++ b/code-example-test.html
@@ -4,12 +4,16 @@
   </head>
   <body>
 
-    <pre>
-      <code>
-        <span><</span>div onclick="console.log(event)"<span>></span>Click me!<span>></span>/div<span>></span>
-        <span><</span>div onclick="alert('test')"<span>></span>Click me!<span>></span>/div<span>></span>
-      </code>
-    </pre>
+Code example test Code example test Code example test Code example test 
+    <div>
+      <pre>
+        <code>
+          <span><</span>div onclick="console.log(event)"<span>></span>Click me!<span>></span>/div<span>></span>
+          <span><</span>div onclick="alert('test')"<span>></span>Click me!<span>></span>/div<span>></span>
+        </code>
+      </pre>
+    </div>
+    Code example test Code example test Code example test Code example test 
   
   </body>
 </html>
