--- a/code-example-test.html
+++ b/code-example-test.html
@@ -1,18 +1,21 @@
-<html>
+<!doctype html><html lang="en-US" prefix="og: https://ogp.me/ns#">
   <head>
     <title>Code example test</title>
   </head>
   <body>
 
 Code example test Code example test Code example test Code example test 
-    <div>
-      <pre>
-        <code>
+    <div><pre><code>
           <span><</span>div onclick="console.log(event)"<span>></span>Click me!<span>></span>/div<span>></span>
           <span><</span>div onclick="alert('test')"<span>></span>Click me!<span>></span>/div<span>></span>
-        </code>
-      </pre>
-    </div>
+        </code></pre></div>
+    Code example test Code example test Code example test Code example test 
+
+    <div><pre class="brush: html notranslate"><code>&lt;input autocomplete="off" /&gt;
+  &lt;input autocomplete="on" /&gt;
+  &lt;input autocomplete="shipping street-address" /&gt;
+  &lt;input autocomplete="section-user1 billing postal-code" /&gt;
+  </code></pre></div>
     Code example test Code example test Code example test Code example test 
   
   </body>
